# Unishader-demo

./: CMakeLists.txt  LICENSE  README.md
balls/: CMakeLists.txt
balls/data/: setup1.txt  setup2.txt  setup3.txt
balls/inc/: ballsEngine.h  ballsView.h  hybridCam.h  includes.h  math3d.h  openGL.h
balls/shaders/: ballsRender.frag  ballsRender.geom  ballsRender.vert  ballsUpdate.vert
balls/src/: ballsEngine.cpp  ballsView.cpp  hybridCam.cpp  main.cpp
cmake/: FindUniShader.cmake
doc/: balls-readme.txt  waves-readme.txt
waves/: CMakeLists.txt
waves/inc/: hybridCam.h  includes.h  openGL.h  settingsUI.h  waveEngine - Copy.h  waveEngine.h  waveView.h
waves/shaders/: wave.frag  wave.vert
waves/src/: hybridCam.cpp  main.cpp  math3d.cpp  settingsUI.cpp  waveEngine - Copy - Copy.cpp  waveEngine.cpp  waveView.cpp
